--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -17,11 +17,9 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 3.1.301
-    - name: Go To Solution
-      run: cd CircleCISample
     - name: Install dependencies
-      run: dotnet restore
+      run: dotnet restore CircleCISample
     - name: Build
-      run: dotnet build --configuration Release --no-restore
+      run: dotnet build CircleCISample --configuration Release --no-restore
     - name: Test
-      run: dotnet test --no-restore --verbosity normal
+      run: dotnet test CircleCISample --no-restore --verbosity normal
